# CubicalRipser

./: .gitignore  pyproject.toml
cripser/: distance.py  rips_utils.py
src/: compute_pairs.cpp  config.h  cubicalripser.cpp  joint_pairs.cpp
tests/: test_distance.py  test_rips_utils.py  test_torch_utils.py
