[project]
name = "cripser"
version = "0.0.32"
description = "Cubical Ripser Python binding"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/shizuo-kaji/CubicalRipser_3dim" }
keywords = ["persistent homology", "TDA", "cubical complex", "image", "volume"]
readme = "README.md"
authors = [
    { name = "Shizuo Kaji", email = "shizuo.kaji@gmail.com"}
    ]
requires-python = ">=3.8"

[build-system]
# setuptools reads metadata from [project]; setup.py drives CMake directly.
# cmake/ninja here lets isolated `pip` builds succeed even on fresh Windows hosts.
requires = [
  "setuptools>=69",
  "wheel",
  "cmake>=3.21",
  "ninja>=1.11",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp3*-*"
skip = "pp* cp31?t-*"

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
include = ["cripser*"]
